# geopolars

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  Cargo.toml  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  versions.json
.github/: dependabot.yml
.github/workflows/: build-test.yml  docs-deploy.yml  lint-python.yml  python-wheels.yml  python.yml  rust.yml  test-python.yml  wasm.yml
0.1.0-alpha.4/: 404.html  index.html  objects.inv
0.1.0-alpha.4/search/: search_index.json
_sources/: index.rst.txt
_sources/reference/: geodataframe.rst.txt  geoseries.rst.txt  index.rst.txt  io.rst.txt
arctic/src/: geodataframe.rs  geoseries.rs  main.rs  util.rs
ci/: proj-compile-wheels.sh  vcpkg.json
data/: cities.arrow
geopolars/: Cargo.toml  datasets
geopolars/benches/: affine.rs  explode.rs
geopolars/geopolars-arrow/: Cargo.toml
geopolars/geopolars-arrow/benches/: README.md  rtree.rs
geopolars/geopolars-arrow/src/: enum_.rs  error.rs  lib.rs  trait_.rs  util.rs
geopolars/geopolars-arrow/src/algorithm/: bounding_rect.rs  mod.rs
geopolars/geopolars-arrow/src/binary/: array.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs
geopolars/geopolars-arrow/src/geo_traits/: linestring.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs
geopolars/geopolars-arrow/src/linestring/: array.rs  array_old.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs
geopolars/geopolars-arrow/src/multilinestring/: array.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs
geopolars/geopolars-arrow/src/multipoint/: array.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs
geopolars/geopolars-arrow/src/multipolygon/: array.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs
geopolars/geopolars-arrow/src/point/: array.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs
geopolars/geopolars-arrow/src/polygon/: array.rs  array_old.rs  iterator.rs  mod.rs  mutable.rs  scalar.rs  util.rs
geopolars/geopolars-geo/: Cargo.toml
geopolars/geopolars-geo/src/: error.rs  geoseries.rs  lib.rs  util.rs
geopolars/geopolars-geo/src/ops/: affine.rs  area.rs  centroid.rs  convex_hull.rs  envelope.rs  explode.rs  exterior.rs  geom_type.rs  is_empty.rs  is_ring.rs  length.rs  mod.rs  point.rs  simplify.rs
geopolars/geopolars-geos/: Cargo.toml
geopolars/geopolars-geos/src/: lib.rs  util.rs
geopolars/geopolars-geos/src/ops/: area.rs
geopolars/src/: broadcasting.rs  error.rs  export.rs  geodataframe.rs  geoseries.rs  lib.rs  main.rs  proj.rs  spatial_index.rs  util.rs
geopolars/src/geoarrow/: mod.rs  util.rs
geopolars/src/geoarrow/linestring/: array.rs  mod.rs  mutable.rs
geopolars/src/geoarrow/point/: array.rs  mutable.rs
geopolars/src/geoarrow/polygon/: array.rs  mutable.rs
geopolars/src/ops/: affine.rs  area.rs  centroid.rs  convex_hull.rs  distance.rs  explode.rs  exterior.rs  length.rs  mod.rs  point.rs  proj.rs  simplify.rs
latest/: 404.html  index.html  sitemap.xml
latest/search/: search_index.json
py-arctic/: README.md  cargo.toml  example.py
py-arctic/src/: geodataframe.rs  lib.rs
py-geopolars/: .gitignore  Cargo.toml  DEVELOP.md  Makefile  README.md  build.requirements.txt  cargo.toml  copy-proj-data.py  example.py  mkdocs.yml  pyproject.toml  requirements-dev.txt
py-geopolars/ci/: proj-compile-wheels.sh  vcpkg.json
py-geopolars/docs/: .gitignore  README.md  index.md  requirements-docs.txt
py-geopolars/docs/api/: functions.md  geodataframe.md  geoseries.md  io.md
py-geopolars/docs/api/operations/: series_georust.md
py-geopolars/docs/source/: conf.py  index.rst
py-geopolars/docs/source/reference/: functions.rst  geoseries.rst  index.rst
py-geopolars/geopolars/: __init__.py  _version.py  convert.py  enums.py  geoseries.py
py-geopolars/geopolars/internals/: base.py  enums.py  geodataframe.py  geoseries.py
py-geopolars/geopolars/internals/georust/: __init__.py  geoseries.py
py-geopolars/geopolars/io/: file.py
py-geopolars/geopolars/proj/: reproject.py
py-geopolars/python/geopolars/: __init__.py  convert.py
py-geopolars/python/geopolars/datasets/: README.md  __init__.py  _convert_from_geopandas.py  naturalearth_cities.arrow  naturalearth_cities_struct.arrow  naturalearth_lowres.arrow  naturalearth_lowres_struct.arrow  nybb.arrow  nybb_struct.arrow  tmp.py
py-geopolars/python/geopolars/internals/: __init__.py  _types.py  geodataframe.py  geoseries.py  types.py
py-geopolars/python/geopolars/internals/georust/: __init__.py  geoseries.py
py-geopolars/python/geopolars/internals/geos/: __init__.py  geoseries.py
py-geopolars/python/geopolars/io/: file.py
py-geopolars/python/geopolars/proj/: __init__.py
py-geopolars/scripts/: copy-proj-data.py
py-geopolars/src/: api.rs  error.rs  ffi.rs  geo.rs  geoseries.rs  lib.rs  proj.rs  utils.rs
py-geopolars/tests/unit/: conftest.py  test_convert.py
py-geopolars/tests/unit/internals/: test_geoseries.py
py-geopolars/tests/unit/io/: test_file.py
reference/: config.html  dataframe.html  datatypes.html  exceptions.html  expression.html  functions.html  geodataframe.html  geoseries.html  index.html  io.html  lazyframe.html  series.html  testing.html
reference/api/: geopolars.GeoDataFrame.geometry.html  geopolars.GeoDataFrame.get_column.html  geopolars.GeoDataFrame.html  geopolars.GeoDataFrame.to_geopandas.html  geopolars.GeoSeries.affine_transform.html  geopolars.GeoSeries.area.html  geopolars.GeoSeries.centroid.html  geopolars.GeoSeries.convex_hull.html  geopolars.GeoSeries.distance.html  geopolars.GeoSeries.envelope.html  geopolars.GeoSeries.euclidean_length.html  geopolars.GeoSeries.exterior.html  geopolars.GeoSeries.geodesic_length.html  geopolars.GeoSeries.geom_skew.html  geopolars.GeoSeries.geom_type.html  geopolars.GeoSeries.html  geopolars.GeoSeries.is_geom_empty.html  geopolars.GeoSeries.is_ring.html  geopolars.GeoSeries.rotate.html  geopolars.GeoSeries.scale.html  geopolars.GeoSeries.skew.html  geopolars.GeoSeries.to_crs.html  (+724 more)
src/: geodataframe.rs  geoseries.rs  lib.rs  main.rs
wasm-geopolars/: Cargo.toml  README.md
(+292 files in other folders)
