[package]
name = "geopolars"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Kyle Barron <kylebarron2@gmail.com>", "Stuart Lynn"]
description = "Geospatial extensions for Polars"
documentation = "https://docs.rs/geopolars"
readme = "../README.md"
repository = "https://github.com/kylebarron/geopolars"
license = "MIT"
exclude = ["cities.arrow"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geozero = { version = "0.9.4", features = ["with-wkb"] }
rstar = "0.9.3"
geo = { git = "https://github.com/georust/geo.git", rev = '578e213875915e1f895892487b5a36ca0d91fac3' }
polars = { version = "0.22.6", default-features = false }


[features]
default = [
  "basic-polars",
  "polars/fmt",
  "polars/zip_with",
  "polars/csv-file",
  "polars/temporal",
  "polars/fmt",
  "polars/dtype-slim",
]

basic-polars = ["polars/ipc", "polars/dtype-u8", "polars/dtype-i8", "polars/private"]
