[package]
name = "geopolars"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Kyle Barron <kylebarron2@gmail.com>", "Stuart Lynn"]
description = "Geospatial extensions for Polars"
documentation = "https://docs.rs/geopolars"
readme = "../README.md"
repository = "https://github.com/geopolars/geopolars"
license = "MIT"
exclude = ["cities.arrow"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "polars/csv-file",
  "polars/dtype-slim",
  "polars/fmt",
  "polars/temporal",
  "polars/zip_with",
]

proj = ["dep:proj"]

[dependencies]
geozero = { version = "0.9.4", features = ["with-wkb"] }
rstar = "0.9.3"
geo = { git = "https://github.com/georust/geo.git", rev = '578e213875915e1f895892487b5a36ca0d91fac3' }
# Only the _minimal_ features to get polars to compile should be declared here
polars = { version = "0.24", features = [
  "dtype-u8",
  "dtype-i8",
  "ipc",
  "private",
], default-features = false }
thiserror = "1.0"

proj = { version = "0.27.0", optional = true, features = [
  "geo-types",
  "bundled_proj",
] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# see: https://bheisler.github.io/criterion.rs/book/faq.html
[lib]
bench = false

[[bench]]
name = "affine"
harness = false

[[bench]]
name = "explode"
harness = false
