[package]
name = "geopolars"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["Kyle Barron <kylebarron2@gmail.com>", "Stuart Lynn"]
description = "Geospatial extensions for Polars"
documentation = "https://docs.rs/geopolars"
readme = "../README.md"
repository = "https://github.com/geopolars/geopolars"
license = "MIT"
exclude = ["cities.arrow"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "polars/csv-file",
  "polars/dtype-slim",
  "polars/fmt",
  "polars/temporal",
  "polars/zip_with",
]

proj = ["dep:proj", "geopolars-geo/proj"]
bundled_proj = ["proj", "proj/bundled_proj"]
geos = []

[dependencies]
polars.workspace = true
thiserror.workspace = true
geo.workspace = true

geopolars-geo = { version = "0.1.0-alpha.4", path = "./geopolars-geo" }
geopolars-geos = { version = "0.1.0-alpha.4", path = "./geopolars-geos", optional = true }
geoarrow = { version = "0.0.1", git = "https://github.com/geopolars/geoarrow" }

geozero = { version = "0.9.4", features = ["with-wkb"] }
rstar = "0.9.3"

proj = { version = "0.27.0", optional = true, features = [
  "geo-types",
] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# see: https://bheisler.github.io/criterion.rs/book/faq.html
[lib]
bench = false

[[bench]]
name = "affine"
harness = false

[[bench]]
name = "explode"
harness = false
