[package]
name = "py-geopolars"
version = "0.1.0-alpha.3"
edition = "2021"
# Specify SPDX expression here instead of in pyproject.toml
# https://maturin.rs/metadata.html#add-spdx-license-expressions
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geopolars"
crate-type = ["cdylib"]

[dependencies]
polars = "0.25"
pyo3 = { version = "0.17.2", features = ["abi3-py38", "extension-module"] }
# Re-enable proj whenever we figure out how to build wheels with it
# https://github.com/geopolars/geopolars/issues/125
# geopolars = { path = "../geopolars", features = ["proj"] }
geopolars = { path = "../geopolars" }
thiserror = "1.0"

[package.metadata.maturin]
python-source = "python"
