[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "geopolars"
version = "0.1.0-alpha.4"
dependencies = [
  # Minimum version with binary dtype
  "polars>=0.14.19",
  "pyarrow>=4.0",
  "numpy >= 1.16.0",
  "importlib_resources; python_version < '3.11'",
  # For easy interop with geoarrow
  "shapely >= 2.0",
  "pyogrio >= 0.5",
]
requires-python = ">=3.8"
description = "Geospatial extensions for Polars"
readme = "README.md"
# Specify SPDX expression in Cargo.toml instead of here
# https://maturin.rs/metadata.html#add-spdx-license-expressions
# license = "MIT"
authors = [{ name = "Kyle Barron" }, { name = "Stuart Lynn" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
repository = "https://github.com/geopolars/geopolars"

[tool.maturin]
python-source = "python"

[tool.isort]
profile = "black"
known_first_party = ["geopolars"]

[tool.mypy]
check_untyped_defs = true
files = ["python/**/*.py", "tests/**/*.py"]
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pyarrow.*", "geopandas.*", "importlib_resources.*", "shapely.*", "pyogrio.*"]
ignore_missing_imports = true

[tool.poetry]
name = "geopolars"
version = "0.1.0-alpha.4"
description = "Geospatial extensions for Polars"
authors = ["Kyle Barron"]

[tool.poetry.dependencies]
python = "^3.8"
# Runtime dependencies must also be declared in [project] for maturin

# Minimum version with binary dtype
polars = ">=0.14.19"
pyarrow = ">=4"
numpy = ">=1.16.0"
importlib_resources = {version = "*", python = "<3.11" }
# For easy interop with geoarrow
shapely = "^2"
pyogrio = "^0.6"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"
maturin = "^1.1.0"
pytest = "^7.3.2"
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.272"
isort = "^5.12.0"
