[package]
name = "geopolars-arrow"
version.workspace = true
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/geopolars/geopolars"
description = "Utilities for working with GeoArrow"

[dependencies]
polars = { workspace = true, features = ["dtype-binary", "dtype-struct"] }
geo.workspace = true
geos = { version = "8", features = ["v3_8_0", "geo"], optional = true }
dyn-clone = "1"
thiserror.workspace = true
anyhow = "1.0"
geozero = { version = "0.9.4", features = ["with-wkb"] }

[lib]
# TODO: fix docstrings
doctest = false
