[package]
name = "geopolars-arrow"
version.workspace = true
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/geopolars/geopolars"
description = "Utilities for working with GeoArrow"

[dependencies]
geo.workspace = true
geos = { version = "8", features = ["v3_8_0", "geo"], optional = true }
dyn-clone = "1"
thiserror.workspace = true
anyhow = "1.0"
geozero = { version = "0.9.4", features = ["with-wkb"] }
arrow2 = { version = "0.15" }
# TODO: properly feature gate this
rstar = { version = "0.9.3" }

[dev-dependencies]
arrow2 = { version = "0.15", features = ["io_parquet", "io_parquet_compression"]}
criterion = { version = "0.4", features = ["html_reports"] }

[lib]
# TODO: fix docstrings
doctest = false
# see: https://bheisler.github.io/criterion.rs/book/faq.html
bench = false

[[bench]]
name = "rtree"
harness = false
