[package]
name = "geopolars-geos"
version.workspace = true
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/geopolars/geopolars"
description = "GEOS backend for GeoPolars"

[dependencies]
polars.workspace = true
geos = { version = "8", features = ["v3_8_0"] }
geopolars-arrow = { version = "0.1.0-alpha.4", path = "../geopolars-arrow" }
