[package]
name = "geopolars-geos"
version.workspace = true
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/geopolars/geopolars"
description = "GEOS backend for GeoPolars"

[dependencies]
polars.workspace = true
geos = { version = "8", features = ["v3_8_0"] }
geoarrow = { version = "0.0.1", git = "https://github.com/geopolars/geoarrow", features = ["geos"] }

[dev-dependencies]
geo.workspace = true
approx = ">= 0.4.0, < 0.6.0"
